# practices

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  Makefile  README.md  build.sh  build_dependencies.sh  configure  practices.code-workspace
practice_1/: CMakeLists.txt  Makefile  main  practice  practice_1.cpp  practice_1.py
practice_10/: CMakeLists.txt  Makefile  main  main.cpp
practice_10/include/: canvas.hpp  graphics.hpp  line.hpp  matrix.hpp  shape.hpp  vector.hpp
practice_10/include/Graphics/: canvas.hpp  circle.hpp  line.hpp  rectangle.hpp  shape.hpp
practice_10/src/: Image.cpp  canvas.cpp  circle.cpp  line.cpp  matrix.cpp  rectangle.cpp  vector.cpp
practice_10/src/Graphics/: ImageIO.cpp  canvas.cpp  rectangle.cpp
practice_10/src/Matrix/: matrix.cpp  unit_tests.cpp
practice_11/: CMakeLists.txt  build.sh  main.cpp
practice_11/include/: LinkedList.h  Person.hpp  SimpleSet.h  functions.hpp  tests.hpp
practice_11/src/: functions.cpp  person.cpp  tests.cpp
practice_12/: CMakeLists.txt  main.cpp
practice_12/include/: FancySafeArray.hpp  SafeArray.hpp
practice_2/: CMakeLists.txt  Makefile  a.out  task_3.cpp  task_5.cpp
practice_2/include/: task_1.hpp  task_2.hpp  (+2 more)
practice_3/: CMakeLists.txt  Makefile  main.cpp
practice_4/: CMakeLists.txt  Makefile  main.cpp
practice_5/: CMakeLists.txt  Makefile  main  main.cpp
practice_6/: CMakeLists.txt  Makefile  game  game.cpp  main  main.cpp
practice_6/include/: GameObjects.h  cannonball.hpp  car.hpp  person.hpp  utilities.hpp
practice_6/src/: GameObjects.cpp  cannonball.cpp  car.cpp  person.cpp  utilities.cpp
practice_7/: CMakeLists.txt  Makefile  dummy  main  main.cpp
practice_8/: CMakeLists.txt  Makefile  main  main.cpp  placeholder.txt
practice_8/include/: coursecatalog.hpp  filestreams.hpp
practice_8/src/: coursecatalog.cpp  filestreams.cpp
practice_9/: CMakeLists.txt  Makefile  main.cpp  minesweeper
practice_9/include/: Minesweeper.h  utils.hpp
practice_9/src/: Minesweeper.cpp
(+27 files in other folders)
